@@ -6,6 +6,8 @@ Version 5.13
 
 Fixed: Issue #154: Upstart script should stop monit early when the system stops [Linux]
 
+Fixed: Issue #155: Monit may crash if the system hostname resolving failed.
+
 
 Version 5.12
 
